[package]
name = "bluetooth_client"
version = "0.0.8"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A client for the local bluetooth radio"
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/bluetooth-client"
repository = "https://github.com/resolvingarchitecture/bluetooth-client"
publish = true
readme = "README.md"
keywords = ["bluetooth"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
failure = "0.1.5"
exitfailure = "0.5.1"

#blurz = "0.4.0"

ra_common = "0.0.40"

[dev-dependencies]
assert_cmd = "0.10"