[package]
name = "bluetooth_client"
version = "0.0.11"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A client for the local bluetooth radio"
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/bluetooth-client"
repository = "https://github.com/resolvingarchitecture/bluetooth-client"
publish = true
readme = "README.md"
keywords = ["bluetooth"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
dirs = "2.0.2"
base64 = "0.12.0"
clap = "2.33.0"

#blurz = "0.4.0"

[dev-dependencies]
assert_cmd = "0.10"

[package.metadata.deb]
maintainer = "Brian Taylor <brian@resolvingarchitecture.io>"
copyright = "Unlicense"
license-file = ["LICENSE","0"]
extended-description = """\
A client for interacting with the local Bluetooth radio. Provides \
a CLI and a Service option that can be ran within the RA Service Bus."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/bluetooth_client", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bluetooth_client/README", "644"],
]